UCSFD8-828 nav z-index bug

--- a/docroot/themes/custom/ucsf/assets/css/style.css
+++ b/docroot/themes/custom/ucsf/assets/css/style.css
@@ -1719,7 +1719,8 @@ a.icon-transit:hover {
           clip: auto;
           overflow: visible;
           -webkit-animation: menu-slide 500ms cubic-bezier(0.77, 0, 0.175, 1) 50ms both;
-          animation: menu-slide 500ms cubic-bezier(0.77, 0, 0.175, 1) 50ms both; }
+          animation: menu-slide 500ms cubic-bezier(0.77, 0, 0.175, 1) 50ms both;
+          z-index: 1; }
       [block="block-ucsf-main-menu-desktop"] .menu-item .menu-child--wrapper .menu-item-close {
         display: block;
         position: absolute;
@@ -5094,7 +5095,7 @@ figure.align-center {
     background: url("/themes/custom/ucsf/assets/images/magnifier-hover.svg") no-repeat center transparent;
     background-size: 28px; }
 
-@media (min-width: 769px) {
+@media (min-width: 850px) {
   .home-search__form .home-search__form-input {
     height: 100px;
     padding-left: 32px;
@@ -6697,7 +6698,8 @@ a[href*="http"] .article-header__date {
   display: none; }
 
 .page-node-type-map .header-region {
-  top: 0; }
+  top: 0;
+  z-index: 780; }
 
 .page-node-type-map .slicknav_nav {
   top: 50px; }
@@ -6707,7 +6709,7 @@ a[href*="http"] .article-header__date {
 
 .page-node-type-map #map-wrapper {
   height: 70vh;
-  z-index: 100; }
+  z-index: 1; }
   @media (min-width: 769px) {
     .page-node-type-map #map-wrapper {
       min-height: calc(100vh - 64px); } }
