--- a/docroot/themes/custom/ucsf/scss/node/_node-map.scss
+++ b/docroot/themes/custom/ucsf/scss/node/_node-map.scss
@@ -9,6 +9,7 @@ $map-height-max-nav: calc(100vh - 64px);
 
   .header-region {
     top: 0;
+    z-index: $z-quicklinks-open-page;
   }
 
   // // when menu is open
@@ -22,7 +23,7 @@ $map-height-max-nav: calc(100vh - 64px);
 
   #map-wrapper {
     height: 70vh;
-    z-index: 100;
+    z-index: 1;
 
     @include breakpoint($new-small) {
       min-height: $map-height-max-nav;
